[project]
name = "rag-research-agent"
version = "0.1.0"
description = "A custom RAG research agent graph in LangGraph."
authors = [
    { name = "Zohaib Aftab", email = "fake@github.ca" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "msgspec>=0.18.6",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#Let setuptools auto-discover packages in src/
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["retrieval_graph", "index_graph", "shared"]
# folders are actual packages (i.e., contain __init__.py)


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "restructuredtext"  # Changed from "google" to "restructuredtext"
[tool.pytest.ini_options]
pythonpath = [
  "src"
]